documentation for JDK 11 support