@@ -580,6 +580,13 @@
                         <forkCount>1</forkCount>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         <rerunFailingTestsCount>2</rerunFailingTestsCount>
+                        <!--
+                            @{argLine} is needed for JaCoCo
+                            -Djdk.attach.allowAttachSelf=true is needed for Java 9+
+                            TODO might not needed when using workaround like in ByteBuddy
+                            of creating an external process to do the Agent attachment
+                            https://github.com/raphw/byte-buddy/issues/295
+                        -->
                         <argLine>@{argLine} -Xms1024m -Xmx2048m -Djdk.attach.allowAttachSelf=true</argLine>
                         <!-- Needed for some weird bug in JDK used in CircleCI-->
                         <useSystemClassLoader>false</useSystemClassLoader>
